adding more follow functionality
